[tool.poetry]
name = "pygarden"
version = "0.1.0"
description = ""
authors = ["darclo <darclo@zaclys.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^5.0.0"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=pygarden --cov-config .coveragerc --cov-report term --cov-report html"
testpaths = ["tests"]


[tool.black]
line-length = 80


# mypy global options
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = ['*.toml$']


# mypy per-module options
[[tool.mypy.overrides]]
module = [
  "fastapi.*",
  "pydantic.*",
  "pytest.*",
  "requests.*",
  "sqlalchemy.*",
  "uvicorn.*",
]
warn_return_any = false
disallow_untyped_defs = true
ignore_missing_imports = true # https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
